# order-forge

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  ORDER_INTAKE.md  README.md  README.pt.md  WORKSHOP.md  biome.json  docker-compose.yml  down.sh  prek.toml  up.sh
.agents/skills/backend-development/: SKILL.md
.agents/skills/build-app/: SKILL.md
.agents/skills/build-docs/: SKILL.md
.agents/skills/changelog-management/: SKILL.md
.agents/skills/debugging/: SKILL.md
.agents/skills/docker-operations/: SKILL.md
.agents/skills/excalidraw/: SKILL.md
.agents/skills/frontend-development/: SKILL.md
.agents/skills/schema-change/: SKILL.md
.agents/skills/ui-exploration/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  conftest.py  entrypoint.sh  prek.toml  pyproject.toml  run-tests.sh
backend/assets/: pdf_sample.py
backend/scripts/: README.md  connect_to_db.sh  migration.sh
backend/src/: asgi.py  logger.py  settings.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2dd77c3e0c00_initial_semaphore_tables.py  78094a9cbb21_create_disabled_tables_clean.py  a2b3c4d5e6f8_order_intake_customers.py  b3c4d5e6f7a9_order_intake_customer_api_key.py  c016e7975ec3_add_async_request_table.py  c4d5e6f7a9b1_order_intake_customer_api_provider.py  d1a2b3c4d5e6_add_notifications_tables.py  d5e6f7a9b1c2_order_intake_code_aliases.py  f1a2b3c4d5e7_order_intake_tables.py
backend/src/app/helpers/: openai.py  register_modules.py
backend/src/app/middleware/: __init__.py  cors.py  opentelemetry.py  request_context.py
backend/src/app/modules/core/blob_storage/: routes.py  tests.py
backend/src/app/modules/core/blob_storage/logic/: main.py
backend/src/app/modules/core/blob_storage/schemas/: io.py
backend/src/app/modules/core/cosmosdb/: routes.py  tests.py
backend/src/app/modules/core/cosmosdb/schemas/: io.py
backend/src/app/modules/core/info/: routes.py  tests.py
backend/src/app/modules/core/info/logic/: health.py  swagger.py  test_runner.py
backend/src/app/modules/core/info/schemas/: io.py  server_status.py
backend/src/app/modules/core/postgresql/: routes.py  tests.py
backend/src/app/modules/core/postgresql/db/: models.py  queries.py
backend/src/app/modules/core/postgresql/logic/: constants.py  dependencies.py  enums.py  errors.py  main.py  utils.py
backend/src/app/modules/core/postgresql/schemas/: io.py
backend/src/app/modules/custom/order_intake/: __init__.py  routes.py  tests.py
backend/src/app/modules/custom/order_intake/db/: catalog_seed.csv  models.py  queries.py
backend/src/app/modules/custom/order_intake/logic/: confidence.py  edifact.py  flow.py  ingest.py  reconcile.py  seed.py
backend/src/app/modules/custom/order_intake/logic/extract/: __init__.py  base.py  bauprofil_text.py  llm.py
backend/src/app/modules/custom/order_intake/schemas/: io.py
backend/src/app/services/blob_storage/: __init__.py  schemas.py  service.py
backend/src/app/services/cosmosdb/: __init__.py  schemas.py  service.py
backend/src/app/services/postgresql/: service.py
backend/src/app/services/semaphore/: __init__.py  service.py
backend/src/app/services/semaphore/db/: models.py  queries.py
backend/tests/samples/: generate_pdfs.py  loader.py
docs/: AGENTS.md  README.md  how-it-was-built.md  project.md  requirements-audit.md
docs/architecture/: README.md
docs/benchmark/: README.md
docs/challenge/: README.md
docs/decisions/: 0001-single-synchronous-module.md  0002-resolve-codes-from-specs-not-llm.md  0003-llm-first-extraction-with-spike-gate.md  0004-confidence-as-concrete-signals.md  0005-edifact-unoa-gate.md  README.md  architecture-review.md
docs/features/extract-example/: README.md  endpoints.md  entities.excalidraw  (+1 more)
docs/interfaces/: extract.excalidraw
docs/sources/: CHANGE_ORDER_EMAIL.md  CLERK_ERROR_LOG.md  CURRENT_PROCESS.excalidraw  FOLLOW_UP_CLARA.md  ORDER_INTAKE_DISCOVERY.md
frontend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml
frontend/public/: sw.js
frontend/scripts/: generate-sw.js  update-api-client.ts
frontend/src/: env.ts  instrumentation.ts  pdfjs-worker-setup.ts  proxy.ts
scripts/: check-file-lines.sh  compose-build.sh  compose-clean-blob.sh  compose-clean-cosmos.sh  compose-clean-postgres.sh  compose-clean.sh  docker-prune.sh  docker-vuln-scan.sh  env-setup.sh  generate-security-report.py  owasp-sans-mapping.json  pre-commit-backend-tests.sh  rebuild-service.sh  setup-workshop.sh  update-api-client.sh
scripts/excalidraw-render/: main.py  pyproject.toml
scripts/excalidraw-render/excalidraw_renderer/: __init__.py  __main__.py  cli.py  colors.py  parser.py  renderer.py  shapes.py  text.py
(+76 files in other folders)
