[project]
name = "invoice-intake-backend"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "azure-ai-formrecognizer>=3.3.3",
    "azure-storage-blob>=12.27.1,<12.28.0",             # cap below 12.28 (uses x-ms-version 2026-02-06 which Azurite 3.35 does not yet support)
    "colorlog>=6.10.1",
    "coverage>=7.13.5",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "jsonschema>=4.26.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "langchain>=1.2.15",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
    "opentelemetry-instrumentation-requests>=0.62b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pydantic>=2.13.3",
    "pymongo>=4.17.0",
    "pymupdf4llm>=0.0.17,<0.1.0",  # light: PyMuPDF only (no onnxruntime/ML layout extras)
    "pypandoc>=1.17",
    "pypdf>=6.10.2",
    "pywebpush>=2.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.27",
    "rapidfuzz>=3.14.5",
    "reportlab>=4.4.10",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "types-jsonschema>=4.26.0.20260408",
    "types-psycopg2>=2.9.21.20260422",
    "types-reportlab>=4.4.10.20260408",
    "types-requests>=2.33.0.20260408",
    "uvicorn>=0.46.0",
    # Security fixes for transitive dependencies
    "wheel>=0.46.2", # CVE-2026-24049 path traversal vulnerability
]

[dependency-groups]
dev = ["ruff>=0.15.12", "ty>=0.0.33"]

# ruff: linter and formatter
[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 4
fix = true
exclude = ["src/alembic/env.py"]
[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"
docstring-code-format = true
[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Also, enabled isort (`I`) with "black" profile
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]                     # Allow fix for all enabled rules (when `--fix`) is provided.
unfixable = []

# ty: type-checker
[tool.ty.environment]
python-version = "3.14"
[tool.ty.src]
exclude = ["**/assets/**", "**/tests/**"]
[[tool.ty.overrides]]
include = ["requests", "requests.*"]
rules = { unresolved-import = "ignore" }

# pytest: tests
[tool.pytest.ini_options]
testpaths = ["src/app/modules"]
python_files = "tests.py"
addopts = "--import-mode=importlib --html=static/test-report.html --self-contained-html -ra -q"
pythonpath = "."
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::sqlalchemy.exc.MovedIn20Warning",
    "ignore::DeprecationWarning:pypdf.*",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Test markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "openai: marks tests that require OpenAI API (deselect with '-m \"not openai\"')",
    "cosmosdb: marks tests that require CosmosDB/MongoDB",
    "postgresql: marks tests that require PostgreSQL",
    "blobstorage: marks tests that require Azure Blob Storage",
    "integration: marks full integration tests that hit real services",
]

# coverage
[tool.coverage.run]
source = [
    "src/app/modules/core/async_wrapper",
    "src/app/modules/core/audio",
    "src/app/modules/core/blob_storage",
    "src/app/modules/core/consumptions",
    "src/app/modules/core/evaluation",
    "src/app/modules/core/info",
    "src/app/modules/core/pdf",
]
disable_warnings = ["module-not-imported"]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "raise NotImplementedError",
]
[tool.coverage.html]
directory = "tests_report"
