[project]
name = "excalidraw-renderer"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = ["pillow>=12.1.0", "pycairo>=1.29.0", "rough>=1.5"]

[project.scripts]
excalidraw-render = "excalidraw_renderer.cli:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
# If your package directory is at repository root: ./excalidraw_renderer/...
module-root = ""
